fix text-align in cards-name

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -15,6 +15,7 @@
   line-height: 18px;
   color: #000000;
   align-self: center;
+  text-align: left;
 }
 
 .card__duration {
